# spark_map

./: .gitignore  LICENSE.txt  README.md  README.rst  articles-en.html  articles-ptbr.html  build-and-test.py  how-to-build.html  how-to-test.html  index.html  listings.json  pyproject.toml  reference-en.html  reference-ptbr.html  search.json  setup.cfg  setup.py  spark.map.py
.github/workflows/: github-pages.yml  pytest.yml
data/: mpg.parquet  stock-prices-dija.parquet  stock-prices-djia.csv  transf.parquet
data/scripts/: students.py
data/students.parquet/: .part-00000-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00001-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00003-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00005-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00007-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00009-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  .part-00011-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet.crc  part-00000-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00001-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00003-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00005-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00007-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00009-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet  part-00011-6abce810-7843-4b68-b1c8-f01a9f8d4b70-c000.snappy.parquet
doc/: README.md  _metadata.yml  _quarto.yml  articles-en.qmd  articles-ptbr.qmd  how-to-build.qmd  how-to-test.qmd  index.qmd  reference-en.qmd  reference-ptbr.qmd  spark_map.md
doc/_site/: articles-en.html  articles-ptbr.html  how-to-build.html  (+6 more)
english/: all_of.html  are_of_type.html  at_position.html  ends_with.html  matches.html  spark_across.html  spark_map.html  starts_with.html
portuguese/: all_of.html  are_of_type.html  at_position.html  ends_with.html  matches.html  spark_map.html  starts_with.html
spark_map/: __init__.py  functions.py  mapping.py  spark_map.py
src/: spark_map.py
tests/: custom-mapping.py  test_functions.py  tests1.py
(+71 files in other folders)
