[metadata]
name = "spark_map"
version = "0.2.1"
author = "Pedro Faria"
author_email = "pedropark99@gmail.com"
description = "Pyspark implementation of `map()` function for spark DataFrames"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[project.urls]
"Homepage" = "https://github.com/pedropark99/spark_map"
"Bug Tracker" = "https://github.com/pedropark99/spark_map/issues"